[package]
name = "labyrinth"
version = "0.0.1"
edition = "2021"
authors = ["Oliver Lau <oliver@ersatzworld.net>"]
description = "Backend (REST API) for an escape room like web-based game"
keywords = ["gamedev"]

[profile.dev]
opt-level = 0

[dependencies]
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "*"
jsonwebtoken = "7.2.0"
warp = "0.3.2"
chrono = "0.4"
bson = { version = "2.1.0", features = ["chrono-0_4"] }
uuid = "*"
futures = "0.3.21"
pbkdf2 = "0.10.1"
rand_core = { version = "0.6", features = ["std"] }
lazy_static = "*"
lettre = "0.10.0-rc.1"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime", "bson-uuid-0_8", "zlib-compression"]
