[package]
name = "labyrinth"
version = "0.0.9"
edition = "2021"
authors = ["Oliver Lau <oliver@ersatzworld.net>"]
description = "Backend (REST API) for an escape room like web-based game"
keywords = ["gamedev"]

[profile.dev]
opt-level = 0
lto = "off"
incremental = true

[profile.release]
strip = true
#lto = true

[dependencies]
hyper = { version = ">= 0.14.17", features = ["full"] }
tokio = { version = ">= 1.17.0", features = ["full"] }
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
thiserror = ">= 1.0.30"
jsonwebtoken = ">= 7.2.0"
warp = ">=0.3.2"
chrono = { version = ">=0.4", features = ["serde"]}
bson = { version = ">=2.1.0", features = ["chrono-0_4", "serde_with", "uuid-0_8"] }
uuid = ">= 0.8.2"
futures = ">=0.3.21"
rand_core = { version = ">= 0.6", features = ["std"] }
lazy_static = ">= 1.4.0"
lettre = { version = ">= 0.10.0-BETA.3", features = ["builder"] }
mongodb-gridfs = ">= 0.2.2"
base64 = ">= 0.13.0"
base32 = ">= 0.4.0"
dotenv = ">= 0.15.0"
md5 = ">= 0.7.0"
rust-argon2 = ">= 1.0"
rand = ">= 0.8.5"
url-escape = ">= 0.1.1"
regex = ">= 1.5.5"
qrcode-generator = ">= 4.1.4"
totp-lite = ">= 1.0.3"
url = ">= 2.2.2"
webauthn-rs = ">= 0.3.2"

[dependencies.mongodb]
version = ">= 2.1.0"
default-features = false
features = ["tokio-runtime", "bson-uuid-0_8", "zlib-compression"]
